--- a/ExerciseCollector/Pages/SummaryPage.xaml
+++ b/ExerciseCollector/Pages/SummaryPage.xaml
@@ -2,13 +2,16 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ExerciseCollector.Pages.ResultPage"
+             x:Class="ExerciseCollector.Pages.SummaryPage"
              x:Name="ContentPage"
-             BindingContext="{x:Reference ContentPage}">
+             xmlns:viewModels="clr-namespace:ExerciseCollector.MVVM.ViewModels">
+    <ContentPage.BindingContext>
+        <viewModels:SummaryViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Spacing="20">
             <CollectionView
-                ItemsSource="{Binding ExerciseResults }"
+                ItemsSource="{Binding ExerciseResults}"
                 HorizontalOptions="Center">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
@@ -19,7 +22,7 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
                 <CollectionView.ItemsLayout>
-                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="20" />
+                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="20"/>
                 </CollectionView.ItemsLayout>
             </CollectionView>
             <Label FontSize="30" Text="{Binding SummaryScore, StringFormat='Итого: {0}'}" />
