--- a/ExerciseCollector/AppShell.xaml
+++ b/ExerciseCollector/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:MainPage}"
+        ContentTemplate="{DataTemplate pages:ExerciseEntrantTypePage}"
         Route="MainPage" />
 
 </Shell>
