--- a/SportMetricsViewer/Pages/SaveSessionPage.xaml
+++ b/SportMetricsViewer/Pages/SaveSessionPage.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:SportMetricsViewer.MVVM.ViewModels"
+             xmlns:viewModels="clr-namespace:ExerciseTracker.MVVM.ViewModels;assembly=ExerciseTracker.MVVM"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:converters="clr-namespace:SportMetricsViewer.Converters"
              xmlns:dtos="clr-namespace:ExerciseTracker.Domain.Abstractions.Dtos;assembly=ExerciseTracker.Domain"
