--- a/SportMetricsViewer/Pages/GenderPage.xaml
+++ b/SportMetricsViewer/Pages/GenderPage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SportMetricsViewer.Pages.GenderPage"
-             xmlns:viewModels="clr-namespace:SportMetricsViewer.MVVM.ViewModels"
+             xmlns:viewModels="clr-namespace:ExerciseTracker.MVVM.ViewModels;assembly=ExerciseTracker.MVVM"
              xmlns:enums="clr-namespace:ExerciseTracker.Domain.Entities.Enums;assembly=ExerciseTracker.Domain"
              Title="Пол"
              x:DataType="viewModels:GenderViewModel">
